* TODO: rewrite BattleMech Pitbull contract;
* TODO: add new lanceDefs for variety?;
* TODO: tonnage limits to the campaign flashpoints (optional);

9.0.8
* Changed: notifications enabled/disabled in several milestones, should fix issues of overlapped screens during talks/notifications;
* Fixed: edits to flashpoints, contracts, etc.
* Added: assigned sound tracks to all conversations;

9.0.7
* Changed: background, contract and description edits by MarkDey and others;
* Changed: Project Umbrella conversation now a part of the Backdoor Man FPs;
* Changed: restored special 'Mechs as rewards and made all of them salvageable;
* Changed: faction Alliance flashpoints now only spawn after the story is complete, the story now resumes after the penultimate flashpoint is completed;
* Fixed: stores incorrectly appearing in Deep Periphery systems;
* Changed: removed Kamea and Alexander incorrectly appearing on the DropShip after Libra Umbrella conversation;

9.0.6
* Fixed: wrong weapon load in KGC-Q mechDef;
* Changed: lowered difficulty in Comanche Moon, Question Of Faith and Speak Of The Devil flashpoints;
* Added: new KGC-E variant;
* Changed: edits to CM, QOF and SOTD flashpoints;

9.0.5a
* Changed: text in Comanche Moon FP
* Fixed: wrong weapon points in AS-P chassisDef;
* Added: Lustful Ballad additional conversation;
* Changed: edits to several star systems, conversations, contracts and flashpoints of parts 1 and 2;
* Changed: CameraLock used in Amaris IV, 1001 BattleMechs III, Man Comes Around II and Danse Macabre I/II convos to fix Kamea blocking Farah;

9.0.4
* Fixed: bugs with Tales of 1001 BattleMechs, The Man Comes Around and Danse Macabre flashpoints and conversations;
* Fixed: correct text in Death's Mask alternative event;
* Changed: no faction dlc flashpoints delayed;
* Changed: several additions and corrections to part 2 FPs and conversations;

9.0.3
* Changed: Double Heat Sinks can also appear as battle salvage;