@@ -179,7 +179,7 @@
                     "Description" : {
                         "Id" : "outcome_1_1",
                         "Name" : "Success, Gets hurt",
-                        "Details" : "\"I suppose that was in storage for a reason, so we can afford to lose it if things go wrong. Just be careful. These weapons are meant to destroy 'Mechs, after all.\"\r\n\r\nLater that week, you get word that [[TGT_MW,{TGT_MW.Callsign}]] is in the MedBay. When you visit {TGT_MW.Obj}, {TGT_MW.Subj} {TGT_MW.Gender?NonBinary:are|Default:is} grinning from ear to ear, despite the bandages.\r\n\r\n\"I did it, Commander! That cannon is purring like a kitten now. Well, a kitten that wants to kill 'Mechs. I even managed to replicate the performance specs of the [[DM.WeaponDefs[Weapon_Autocannon_AC20_1-Kali_Yama],{DM.WeaponDefs[Weapon_Autocannon_AC20_1-Kali_Yama].Description.Manufacturer} {DM.WeaponDefs[Weapon_Autocannon_AC20_1-Kali_Yama].Description.Model}]].\"",
+                        "Details" : "\"I suppose that was in storage for a reason, so we can afford to lose it if things go wrong. Just be careful. These weapons are meant to destroy 'Mechs, after all.\"\r\n\r\nLater that week, you get word that [[TGT_MW,{TGT_MW.Callsign}]] is in the MedBay. When you visit {TGT_MW.Obj}, {TGT_MW.Subj} {TGT_MW.Gender?NonBinary:are|Default:is} grinning from ear to ear, despite the bandages.\r\n\r\n\"I did it, Commander! That cannon is purring like a kitten now. Well, a kitten that wants to kill 'Mechs. I even managed to replicate the performance specs of the [[DM.WeaponDefs[Weapon_Autocannon_AC20_1-Mydron],{DM.WeaponDefs[Weapon_Autocannon_AC20_1-Mydron].Description.Manufacturer} {DM.WeaponDefs[Weapon_Autocannon_AC20_1-Mydron].Description.Model}]].\"",
                         "Icon" : ""
                     },
                     "Weight" : 25,
@@ -205,7 +205,7 @@
                                 },
                                 {
                                     "typeString" : "System.Int32",
-                                    "name" : "Item.WeaponDef.Weapon_Autocannon_AC20_1-Kali_Yama",
+                                    "name" : "Item.WeaponDef.Weapon_Autocannon_AC20_1-Mydron",
                                     "value" : "1",
                                     "set" : false,
                                     "valueConstant" : null
@@ -489,7 +489,7 @@
                     "Description" : {
                         "Id" : "outcome_2_1",
                         "Name" : "Success, wpn 2",
-                        "Details" : "\"MechWarriors belong in the 'Mechs. Technicians belong in the Mech Bay. But you seem pretty knowledgeable about these things, and you've already gutted the weapon. Explain to Yang what you were going for, and maybe he can finish what you started.\"\r\n\r\nLater that week, you catch [[TGT_MW,{TGT_MW.Callsign}]] in the hall.\r\n\r\n\"Chief Virtanen wanted me to pass along the good news. He investigated your suggestions and managed to replicate the performance specs of the [[DM.WeaponDefs[Weapon_Autocannon_AC20_1-Kali_Yama],{DM.WeaponDefs[Weapon_Autocannon_AC20_1-Kali_Yama].Description.Manufacturer} {DM.WeaponDefs[Weapon_Autocannon_AC20_1-Kali_Yama].Description.Model}]].\"\r\n\r\n{TGT_MW.Callsign} basks in the glow of victory. \"I knew it would work! So\u2026 does that mean I'm riding out on the next contract? I feel like I should be the first one to get to fire it!\"",
+                        "Details" : "\"MechWarriors belong in the 'Mechs. Technicians belong in the Mech Bay. But you seem pretty knowledgeable about these things, and you've already gutted the weapon. Explain to Yang what you were going for, and maybe he can finish what you started.\"\r\n\r\nLater that week, you catch [[TGT_MW,{TGT_MW.Callsign}]] in the hall.\r\n\r\n\"Chief Virtanen wanted me to pass along the good news. He investigated your suggestions and managed to replicate the performance specs of the [[DM.WeaponDefs[Weapon_Autocannon_AC20_1-Mydron],{DM.WeaponDefs[Weapon_Autocannon_AC20_1-Mydron].Description.Manufacturer} {DM.WeaponDefs[Weapon_Autocannon_AC20_1-Mydron].Description.Model}]].\"\r\n\r\n{TGT_MW.Callsign} basks in the glow of victory. \"I knew it would work! So\u2026 does that mean I'm riding out on the next contract? I feel like I should be the first one to get to fire it!\"",
                         "Icon" : ""
                     },
                     "Weight" : 25,
@@ -515,7 +515,7 @@
                                 },
                                 {
                                     "typeString" : "System.Int32",
-                                    "name" : "Item.WeaponDef.Weapon_Autocannon_AC20_1-Kali_Yama",
+                                    "name" : "Item.WeaponDef.Weapon_Autocannon_AC20_1-Mydron",
                                     "value" : "1",
                                     "set" : false,
                                     "valueConstant" : null
