@@ -14,7 +14,7 @@
             "Scope" : "Company",
             "RequirementTags" : {
                 "items" : [
-					"company_story_harbingersOfDoom",
+					"flashpoint_unnaturalSelection_complete",
 					"company_story_flashpoints"
 				],
                 "tagSetSourceFile" : "Tags/CompanyTags"
