@@ -15,7 +15,6 @@
             "RequirementTags" : {
                 "items" : [
 					"flashpoint_ghostRiders_complete",
-					"flashpoint_unnaturalSelection_complete",
 					"company_story_flashpoints"
 				],
                 "tagSetSourceFile" : "Tags/CompanyTags"
