@@ -1,6 +1,6 @@
 {
     "Description" : {
-        "Id" : "milestone_1337_sim_argo",
+        "Id" : "milestone_1325_sim_argo",
         "Name" : "sim",
         "Details" : "Sim game phase",
         "Icon" : "",
@@ -24,7 +24,7 @@
                 {
                     "obj" : "NextStoryMilestone",
                     "op" : "Equal",
-                    "val" : 1337,
+                    "val" : 1325,
                     "valueConstant" : null
                 }
             ]
@@ -35,62 +35,31 @@
             "Scope" : "Company",
             "Requirements" : null,
             "AddedTags" : {
-			    "items" : [
-					"company_story_redoubt"
-				],
+			    "items" : [],
                 "tagSetSourceFile" : ""
 			},
             "RemovedTags" : {
 				"items" : [
 					"AARCompleteNotificationsDisabled"
 				],
-                "tagSetSourceFile" : ""			
+                "tagSetSourceFile" : ""
 			},
             "Stats" : [
                 {
                     "typeString" : "System.Int32",
                     "name" : "NextStoryMilestone",
-                    "value" : 1,
+                    "value" : 1334,
+					"set" : true,
                     "valueConstant" : ""
                 }
 			],
             "Actions" : [
 				{
-					"Type" : "System_SimGameCharacterVisible",
-					"value" : true,
-					"additionalValues" : [
-						"Farah",
-						"Yang",
-						"Darius",
-						"Sumire"
-					]
-				},	
-				{
-                    "Type" : "StarSystem_SetActiveDef",
-                    "value" : "starsystemdef_Smithon",
-					"additionalValues" : [ "starsystemdef_Smithon_Career" ]
-                },
-				{
-                    "Type" : "StarSystem_SetActiveDef",
-                    "value" : "starsystemdef_Umgard",
-					"additionalValues" : [ "starsystemdef_Umgard_Career" ]
-                },
-				{
-                    "Type" : "StarSystem_SetActiveDef",
-                    "value" : "starsystemdef_Enkra",
-					"additionalValues" : [ "starsystemdef_Enkra_Career" ]
-                },
-				{
-                    "Type" : "StarSystem_SetActiveDef",
-                    "value" : "starsystemdef_Zangul",
-					"additionalValues" : [ "starsystemdef_Zangul_Career" ]
-                },
-				{
 					"Type" : "System_AddFlashpoint",
-					"value" : "fp_StoryTime_HYR_316_atomic",
+					"value" : "fp_StoryTime_HYR_314_barbariansAtTheGates",
 					"valueConstant" : null,
 					"additionalValues" : [
-						"Guldra"
+						"Gangtok"
 					]
 				}
             ],
