@@ -1,6 +1,6 @@
 {
     "Description" : {
-        "Id" : "milestone_1337_sim_argo",
+        "Id" : "milestone_1339_sim_argo",
         "Name" : "sim",
         "Details" : "Sim game phase",
         "Icon" : "",
@@ -24,7 +24,7 @@
                 {
                     "obj" : "NextStoryMilestone",
                     "op" : "Equal",
-                    "val" : 1337,
+                    "val" : 1339,
                     "valueConstant" : null
                 }
             ]
@@ -35,9 +35,7 @@
             "Scope" : "Company",
             "Requirements" : null,
             "AddedTags" : {
-			    "items" : [
-					"company_story_redoubt"
-				],
+			    "items" : [],
                 "tagSetSourceFile" : ""
 			},
             "RemovedTags" : {
@@ -50,7 +48,8 @@
                 {
                     "typeString" : "System.Int32",
                     "name" : "NextStoryMilestone",
-                    "value" : 1,
+                    "value" : 1351,
+					"set" : true,
                     "valueConstant" : ""
                 }
 			],
@@ -59,6 +58,7 @@
 					"Type" : "System_SimGameCharacterVisible",
 					"value" : true,
 					"additionalValues" : [
+						"Alexander",
 						"Farah",
 						"Yang",
 						"Darius",
@@ -87,10 +87,10 @@
                 },
 				{
 					"Type" : "System_AddFlashpoint",
-					"value" : "fp_StoryTime_HYR_316_atomic",
+					"value" : "fp_StoryTime_HYR_317_theEyesOfTruth",
 					"valueConstant" : null,
 					"additionalValues" : [
-						"Guldra"
+						"Coromodir"
 					]
 				}
             ],
