@@ -12,6 +12,8 @@ Change Log - Hyades Rim
 * Changed: notifications enabled/disabled in several milestones, should fix issues of overlapped screens during talks/notifications;
 * Fixed: edits to flashpoints, contracts, etc.
 * Added: assigned sound tracks to all conversations;
+* Fixed: bug with Moonlighting with an AC/20 event;
+* Added: milestones for part three;
 
 9.0.7
 * Changed: background, contract and description edits by MarkDey and others;
